<?xml version="1.0"?>
<package format="2">
  <name>ros_data_recorder</name>
  <version>0.1.0</version>
  <description>ROS1 data recorder and player with web interface</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  
  <exec_depend>rosbag</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>python-flask</exec_depend>
</package>